chore(extension): 重构extension模块